[gd_scene load_steps=34 format=2]

[ext_resource path="res://ASSETS/background/Level1/set2_tiles.png" type="Texture" id=1]
[ext_resource path="res://Jonny.tscn" type="PackedScene" id=2]
[ext_resource path="res://Coin.tscn" type="PackedScene" id=3]
[ext_resource path="res://ASSETS/background/Level1/set2_background.png" type="Texture" id=4]
[ext_resource path="res://ASSETS/HUD/Level1/coin_gold.png" type="Texture" id=5]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=6]
[ext_resource path="res://ASSETS/HUD/Level1/heart.png" type="Texture" id=7]
[ext_resource path="res://ASSETS/fonts/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://HUD.gd" type="Script" id=9]
[ext_resource path="res://Flag.tscn" type="PackedScene" id=10]
[ext_resource path="res://ASSETS/Tileset/Level1/Level1.tres" type="TileSet" id=11]
[ext_resource path="res://keyborder_direction.tscn" type="PackedScene" id=12]
[ext_resource path="res://Pause.tscn" type="PackedScene" id=13]
[ext_resource path="res://Level1.gd" type="Script" id=14]
[ext_resource path="res://stop.tscn" type="PackedScene" id=15]
[ext_resource path="res://Flag_1.gd" type="Script" id=16]
[ext_resource path="res://ASSETS/music/Level1/Retro Beat.ogg" type="AudioStream" id=17]
[ext_resource path="res://Heart.tscn" type="PackedScene" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4044.74, 111.979 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.392157, 0.0784314, 0.0784314, 0 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 25
outline_color = Color( 1, 0.8, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=9]
size = 40
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=11]
size = 40
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=12]
size = 40
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=14]
size = 40
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=15]
size = 40
font_data = ExtResource( 8 )

[node name="Level1" type="Node2D"]
script = ExtResource( 14 )

[node name="Tile Solid" type="TileMap" parent="."]
tile_set = ExtResource( 11 )
collision_layer = 2
collision_mask = 49
format = 1
tile_data = PoolIntArray( 65535, 0, 0, 130, 0, 0, 131071, 0, 0, 65666, 0, 0, 196607, 0, 0, 131078, 6, 0, 131079, 3, 0, 131080, 3, 0, 131081, 3, 0, 131082, 3, 0, 131083, 8, 0, 131202, 0, 0, 262143, 0, 0, 196635, 0, 0, 196638, 0, 0, 196675, 6, 0, 196676, 3, 0, 196677, 3, 0, 196678, 3, 0, 196679, 8, 0, 196696, 6, 0, 196697, 3, 0, 196698, 3, 0, 196699, 3, 0, 196700, 8, 0, 196716, 0, 0, 196717, 0, 0, 196718, 0, 0, 196719, 0, 0, 196720, 0, 0, 196721, 0, 0, 196738, 0, 0, 327679, 0, 0, 262170, 0, 0, 262171, 0, 0, 262174, 0, 0, 262175, 0, 0, 262189, 6, 0, 262190, 3, 0, 262191, 3, 0, 262192, 3, 0, 262193, 3, 0, 262194, 3, 0, 262195, 8, 0, 262208, 0, 0, 262230, 0, 0, 262242, 6, 0, 262243, 8, 0, 262251, 0, 0, 262252, 0, 0, 262253, 0, 0, 262254, 0, 0, 262255, 0, 0, 262256, 0, 0, 262257, 0, 0, 262258, 0, 0, 262274, 0, 0, 393215, 0, 0, 327685, 6, 0, 327686, 3, 0, 327687, 3, 0, 327688, 3, 0, 327689, 3, 0, 327690, 3, 0, 327691, 3, 0, 327692, 8, 0, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327710, 0, 0, 327711, 0, 0, 327712, 0, 0, 327723, 0, 0, 327759, 6, 0, 327760, 3, 0, 327761, 3, 0, 327762, 8, 0, 327786, 0, 0, 327787, 0, 0, 327788, 0, 0, 327789, 0, 0, 327790, 0, 0, 327791, 0, 0, 327792, 0, 0, 327793, 0, 0, 327794, 0, 0, 327795, 0, 0, 327810, 0, 0, 458751, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 393246, 0, 0, 393247, 0, 0, 393248, 0, 0, 393249, 0, 0, 393274, 0, 0, 393275, 0, 0, 393276, 0, 0, 393277, 0, 0, 393278, 0, 0, 393321, 0, 0, 393322, 0, 0, 393323, 0, 0, 393324, 0, 0, 393325, 0, 0, 393326, 0, 0, 393327, 0, 0, 393328, 0, 0, 393329, 0, 0, 393330, 0, 0, 393331, 0, 0, 393332, 0, 0, 393346, 0, 0, 524287, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458782, 0, 0, 458783, 0, 0, 458784, 0, 0, 458785, 0, 0, 458786, 0, 0, 458810, 0, 0, 458814, 0, 0, 458856, 0, 0, 458857, 0, 0, 458858, 0, 0, 458859, 0, 0, 458860, 0, 0, 458861, 0, 0, 458862, 0, 0, 458863, 0, 0, 458864, 0, 0, 458865, 0, 0, 458866, 0, 0, 458867, 0, 0, 458868, 0, 0, 458869, 0, 0, 458882, 0, 0, 589823, 0, 0, 524288, 2, 0, 524289, 3, 0, 524290, 3, 0, 524291, 3, 0, 524292, 3, 0, 524293, 3, 0, 524294, 3, 0, 524295, 3, 0, 524296, 3, 0, 524297, 3, 0, 524298, 3, 0, 524299, 3, 0, 524300, 3, 0, 524301, 3, 0, 524302, 3, 0, 524303, 3, 0, 524304, 3, 0, 524305, 3, 0, 524306, 3, 0, 524307, 3, 0, 524308, 3, 0, 524309, 3, 0, 524310, 3, 0, 524311, 3, 0, 524312, 3, 0, 524313, 3, 0, 524314, 3, 0, 524315, 4, 0, 524318, 3, 0, 524319, 3, 0, 524320, 3, 0, 524321, 3, 0, 524322, 3, 0, 524323, 3, 0, 524324, 3, 0, 524325, 3, 0, 524326, 3, 0, 524327, 3, 0, 524328, 3, 0, 524329, 3, 0, 524330, 3, 0, 524331, 3, 0, 524332, 3, 0, 524333, 3, 0, 524334, 3, 0, 524335, 3, 0, 524336, 3, 0, 524337, 3, 0, 524338, 3, 0, 524339, 3, 0, 524340, 3, 0, 524341, 3, 0, 524342, 3, 0, 524343, 3, 0, 524344, 3, 0, 524345, 3, 0, 524346, 4, 0, 524350, 2, 0, 524351, 3, 0, 524352, 3, 0, 524353, 3, 0, 524354, 3, 0, 524355, 3, 0, 524356, 3, 0, 524357, 3, 0, 524358, 3, 0, 524359, 3, 0, 524360, 3, 0, 524361, 3, 0, 524362, 3, 0, 524363, 3, 0, 524364, 3, 0, 524365, 3, 0, 524366, 3, 0, 524367, 4, 0, 524370, 2, 0, 524371, 3, 0, 524372, 3, 0, 524373, 3, 0, 524374, 3, 0, 524375, 3, 0, 524376, 3, 0, 524377, 3, 0, 524378, 3, 0, 524379, 3, 0, 524380, 3, 0, 524381, 3, 0, 524382, 3, 0, 524383, 3, 0, 524384, 3, 0, 524385, 3, 0, 524386, 3, 0, 524387, 3, 0, 524388, 3, 0, 524389, 3, 0, 524390, 3, 0, 524391, 3, 0, 524392, 3, 0, 524393, 3, 0, 524394, 3, 0, 524395, 3, 0, 524396, 3, 0, 524397, 3, 0, 524398, 3, 0, 524399, 3, 0, 524400, 3, 0, 524401, 3, 0, 524402, 3, 0, 524403, 3, 0, 524404, 3, 0, 524405, 3, 0, 524406, 3, 0, 524407, 3, 0, 524408, 3, 0, 524409, 3, 0, 524410, 3, 0, 524411, 3, 0, 524412, 3, 0, 524413, 3, 0, 524414, 3, 0, 524415, 3, 0, 524416, 3, 0, 524417, 4, 0, 524418, 0, 0, 655359, 0, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 589844, 1, 0, 589845, 1, 0, 589846, 1, 0, 589847, 1, 0, 589848, 1, 0, 589849, 1, 0, 589850, 1, 0, 589851, 1, 0, 589854, 1, 0, 589855, 1, 0, 589856, 1, 0, 589857, 1, 0, 589858, 1, 0, 589859, 1, 0, 589860, 1, 0, 589861, 1, 0, 589862, 1, 0, 589863, 1, 0, 589864, 1, 0, 589865, 1, 0, 589866, 1, 0, 589867, 1, 0, 589868, 1, 0, 589869, 1, 0, 589870, 1, 0, 589871, 1, 0, 589872, 1, 0, 589873, 1, 0, 589874, 1, 0, 589875, 1, 0, 589876, 1, 0, 589877, 1, 0, 589878, 1, 0, 589879, 1, 0, 589880, 1, 0, 589881, 1, 0, 589882, 1, 0, 589886, 1, 0, 589887, 1, 0, 589888, 1, 0, 589889, 1, 0, 589890, 1, 0, 589891, 1, 0, 589892, 1, 0, 589893, 1, 0, 589894, 1, 0, 589895, 1, 0, 589896, 1, 0, 589897, 1, 0, 589898, 1, 0, 589899, 1, 0, 589900, 1, 0, 589901, 1, 0, 589902, 1, 0, 589903, 1, 0, 589906, 1, 0, 589907, 1, 0, 589908, 1, 0, 589909, 1, 0, 589910, 1, 0, 589911, 1, 0, 589912, 1, 0, 589913, 1, 0, 589914, 1, 0, 589915, 1, 0, 589916, 1, 0, 589917, 1, 0, 589918, 1, 0, 589919, 1, 0, 589920, 1, 0, 589921, 1, 0, 589922, 1, 0, 589923, 1, 0, 589924, 1, 0, 589925, 1, 0, 589926, 1, 0, 589927, 1, 0, 589928, 1, 0, 589929, 1, 0, 589930, 1, 0, 589931, 1, 0, 589932, 1, 0, 589933, 1, 0, 589934, 1, 0, 589935, 1, 0, 589936, 1, 0, 589937, 1, 0, 589938, 1, 0, 589939, 1, 0, 589940, 1, 0, 589941, 1, 0, 589942, 1, 0, 589943, 1, 0, 589944, 1, 0, 589945, 1, 0, 589946, 1, 0, 589947, 1, 0, 589948, 1, 0, 589949, 1, 0, 589950, 1, 0, 589951, 1, 0, 589952, 1, 0, 589953, 1, 0, 589954, 0, 0 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Purple Sky" type="ParallaxLayer" parent="ParallaxBackground"]
scale = Vector2( 1.5, 1.5 )
motion_mirroring = Vector2( 960, 720 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Purple Sky"]
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
centered = false

[node name="Middle Block" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color( 0.858824, 0.8, 0.890196, 0.631373 )
position = Vector2( -14.2705, 9.51367 )
motion_scale = Vector2( 0.4, 0.4 )
motion_mirroring = Vector2( 1600, 1200 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Middle Block"]
scale = Vector2( 2.75, 2.75 )
texture = ExtResource( 1 )
centered = false

[node name="Near By Block" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color( 0.501961, 0.490196, 0.905882, 0.329412 )
motion_scale = Vector2( 0.7, 0.7 )
motion_mirroring = Vector2( 1120, 840 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Near By Block"]
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 1 )
centered = false

[node name="Fall Zone" type="Area2D" parent="."]
position = Vector2( 4244.11, 978.902 )
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fall Zone"]
position = Vector2( 4, -4 )
shape = SubResource( 1 )

[node name="HUD" type="CanvasLayer" parent="."]
pause_mode = 1
script = ExtResource( 9 )

[node name="health_coins" type="PanelContainer" parent="HUD"]
margin_left = 20.0
margin_top = 15.0
margin_right = 162.0
margin_bottom = 95.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="total_coins" type="TextureRect" parent="HUD"]
margin_left = 44.3676
margin_top = 15.0
margin_right = 83.3676
margin_bottom = 50.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="X_1" type="Label" parent="HUD"]
margin_left = 102.357
margin_top = 17.1784
margin_right = 124.357
margin_bottom = 48.1784
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.8, 0, 1 )
text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coins" type="Label" parent="HUD"]
margin_left = 128.141
margin_top = 10.0
margin_right = 270.141
margin_bottom = 58.0
custom_fonts/font = SubResource( 4 )
text = "##"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="total_health" type="TextureRect" parent="HUD"]
margin_left = 45.4271
margin_top = 57.0
margin_right = 85.4271
margin_bottom = 94.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="X_2" type="Label" parent="HUD"]
margin_left = 102.0
margin_top = 56.0595
margin_right = 118.0
margin_bottom = 87.0595
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0.8, 0, 1 )
text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="HUD"]
margin_left = 127.081
margin_top = 50.0
margin_right = 269.081
margin_bottom = 98.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "##"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time" type="PanelContainer" parent="HUD"]
margin_left = 335.0
margin_top = 15.0
margin_right = 435.0
margin_bottom = 95.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_lable" type="Label" parent="HUD"]
margin_left = 340.0
margin_top = 10.0
margin_right = 440.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.537255, 0.643137, 0.65098, 1 )
text = "Time"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="total_time" type="Label" parent="HUD"]
margin_left = 350.0
margin_top = 50.0
margin_right = 450.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "###"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="PanelContainer" parent="HUD"]
margin_left = 890.0
margin_top = 17.1189
margin_right = 1010.0
margin_bottom = 97.1189
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_text" type="Label" parent="HUD"]
margin_left = 803.828
margin_top = 5.89481
margin_right = 911.828
margin_bottom = 55.8948
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.517647, 0.611765, 0.631373, 1 )
text = "Score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scoer_value" type="Label" parent="HUD"]
margin_left = 845.15
margin_top = 53.0787
margin_right = 870.15
margin_bottom = 101.079
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level_name" type="PanelContainer" parent="HUD"]
margin_left = 630.0
margin_top = 15.0
margin_right = 730.0
margin_bottom = 95.0
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Levvel_string" type="Label" parent="HUD"]
margin_left = 583.955
margin_top = 8.0
margin_right = 681.955
margin_bottom = 56.0
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0.494118, 0.584314, 0.603922, 1 )
text = "Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level_value" type="Label" parent="HUD"]
margin_left = 625.0
margin_top = 50.0
margin_right = 656.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="keyborder_direction" parent="HUD" instance=ExtResource( 12 )]
position = Vector2( 20.8066, 298.849 )

[node name="Pause" parent="HUD" instance=ExtResource( 13 )]
pause_mode = 2
visible = false

[node name="Stop" parent="HUD" instance=ExtResource( 15 )]
position = Vector2( 947.16, 12.7135 )

[node name="Coin" type="Node2D" parent="."]

[node name="Coin1" parent="Coin" instance=ExtResource( 3 )]
position = Vector2( 600, 80 )

[node name="Coin2" parent="Coin" instance=ExtResource( 3 )]
position = Vector2( 440, 280 )

[node name="Coin3" parent="Coin" instance=ExtResource( 3 )]
position = Vector2( 720, 280 )

[node name="Coin4" parent="Coin" instance=ExtResource( 3 )]
position = Vector2( 3020, 220 )

[node name="Coin5" parent="Coin" instance=ExtResource( 3 )]
position = Vector2( 3220, 220 )

[node name="Coin6" parent="Coin" instance=ExtResource( 3 )]
position = Vector2( 4541.19, 150.703 )

[node name="Coin8" parent="Coin" instance=ExtResource( 3 )]
position = Vector2( 5180, 280 )

[node name="Coin9" parent="Coin" instance=ExtResource( 3 )]
position = Vector2( 5700, 151.676 )

[node name="Coin11" parent="Coin" instance=ExtResource( 3 )]
position = Vector2( 7105, 149.757 )

[node name="Coin10" parent="Coin" instance=ExtResource( 3 )]
position = Vector2( 5898.81, 150.486 )

[node name="Coin7" parent="Coin" instance=ExtResource( 3 )]
position = Vector2( 4360, 147.135 )

[node name="Enemy" type="Node2D" parent="."]

[node name="Enemy1" parent="Enemy" instance=ExtResource( 6 )]
position = Vector2( 600, 80 )

[node name="Enemy2" parent="Enemy" instance=ExtResource( 6 )]
position = Vector2( 440, 280 )
detect_clils = false

[node name="Enemy3" parent="Enemy" instance=ExtResource( 6 )]
position = Vector2( 720, 280 )
detect_clils = false

[node name="Enemy4" parent="Enemy" instance=ExtResource( 6 )]
position = Vector2( 1728, 64 )
direction = 1
detect_clils = false

[node name="Enemy5" parent="Enemy" instance=ExtResource( 6 )]
position = Vector2( 2546.67, 477.232 )
direction = 1
detect_clils = false

[node name="Enemy6" parent="Enemy" instance=ExtResource( 6 )]
position = Vector2( 3597.93, 480.796 )
detect_clils = false

[node name="Enemy7" parent="Enemy" instance=ExtResource( 6 )]
position = Vector2( 5187.3, 42.4737 )
direction = 1

[node name="Enemy11" parent="Enemy" instance=ExtResource( 6 )]
position = Vector2( 5760, 384 )
detect_clils = false

[node name="Enemy8" parent="Enemy" instance=ExtResource( 6 )]
position = Vector2( 6473.75, 452.287 )
detect_clils = false

[node name="Enemy9" parent="Enemy" instance=ExtResource( 6 )]
position = Vector2( 6976, 64 )
direction = 1
detect_clils = false

[node name="Enemy10" parent="Enemy" instance=ExtResource( 6 )]
position = Vector2( 7232, 64 )
direction = 1
detect_clils = false

[node name="Health" type="Node2D" parent="."]

[node name="Heart" parent="Health" instance=ExtResource( 18 )]
position = Vector2( 1176.77, 446.012 )

[node name="Jonny" parent="." instance=ExtResource( 2 )]
position = Vector2( 220, 180 )
collision_mask = 30

[node name="Camera2D" type="Camera2D" parent="Jonny"]
current = true
limit_left = 0
limit_top = 0
limit_right = 8310
limit_bottom = 600
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 10.0
editor_draw_limits = true

[node name="Flag" parent="." instance=ExtResource( 10 )]
position = Vector2( 8194.56, 480.578 )
script = ExtResource( 16 )

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
[connection signal="body_entered" from="Fall Zone" to="Jonny" method="_on_Fall_Zone_body_entered"]
[connection signal="pressed" from="HUD/Stop" to="." method="_on_Stop_pressed"]
[connection signal="coin_collected" from="Coin/Coin1" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Coin/Coin2" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Coin/Coin3" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Coin/Coin4" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Coin/Coin5" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Coin/Coin6" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Coin/Coin8" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Coin/Coin9" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Coin/Coin11" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Coin/Coin10" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Coin/Coin7" to="HUD" method="_on_coin_collected"]
[connection signal="score" from="Enemy/Enemy1" to="HUD" method="_on_Enemy_score"]
[connection signal="score" from="Enemy/Enemy2" to="HUD" method="_on_Enemy_score"]
[connection signal="score" from="Enemy/Enemy3" to="HUD" method="_on_Enemy_score"]
[connection signal="score" from="Enemy/Enemy4" to="HUD" method="_on_Enemy_score"]
[connection signal="score" from="Enemy/Enemy5" to="HUD" method="_on_Enemy_score"]
[connection signal="score" from="Enemy/Enemy6" to="HUD" method="_on_Enemy_score"]
[connection signal="score" from="Enemy/Enemy7" to="HUD" method="_on_Enemy_score"]
[connection signal="score" from="Enemy/Enemy11" to="HUD" method="_on_Enemy_score"]
[connection signal="score" from="Enemy/Enemy8" to="HUD" method="_on_Enemy_score"]
[connection signal="score" from="Enemy/Enemy9" to="HUD" method="_on_Enemy_score"]
[connection signal="score" from="Enemy/Enemy10" to="HUD" method="_on_Enemy_score"]
[connection signal="health_added" from="Health/Heart" to="HUD" method="_on_Heart_health_added"]
[connection signal="health_value" from="Jonny" to="HUD" method="_on_Jonny_health_value"]
[connection signal="time_value" from="Jonny" to="HUD" method="_on_Jonny_time_value"]
